# edu_course

./: .gitignore
dices/src/: CMakeLists.txt  README.md  proto.md
dices/src/server/: CMakeLists.txt  application.cpp  application.h  client_handler.h  command_decoder.cpp  command_decoder.h  command_encoder.h  common_types.h  connection_manager.cpp  connection_manager.h  main.cpp  network_utils.h
dices/src/tools/: client.py
